split master pom
created new pom fragments for logging components and for itests;
adapted the other poms to use them
fixed jacoco and sonar multiproject run
fixed site multiproject run
fixed gpg and jar signers